# godot-bridle

./: .gitignore  README.md  pyproject.toml
.docs/: status.md
.github/workflows/: ci.yml  external-smoke.yml  release-candidates.yml
.kilo/plans/: progress-assessment-and-next-steps.md
addons/bridle/: bridle_editor.gd  plugin.cfg
bridle/: __init__.py
bridle/app/: cli.py  services.py  sidecar.py  sidecar_entry.py
bridle/config/: __init__.py  key_resolver.py  loader.py  secrets.py
bridle/domain/: __init__.py  assets.py  capabilities.py  errors.py  events.py  jobs.py  production.py  projects.py  providers.py
bridle/godot/: __init__.py  cli.py  downloader.py  glb.py  glb_normalize.py  import_pipeline.py  project.py
bridle/harness/: __init__.py  benchmark.py  cache.py  character_workflow.py  event_bus.py  (+2 more)
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/bridle-protocol/: Cargo.toml
desktop/src-tauri/bridle-protocol/src/: lib.rs
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 00-initial-need-and-situation.md  01-engineering-plan.md  02-requirements-analysis.md  03-provider-research-and-tech-stack.md  04-architecture-decisions.md  05-system-design.md  06-detailed-design-core-contracts.md  07-v0.1-alpha-implementation-plan.md  08-rag-vector-knowledge-base.md  09-alpha-development-and-packaging.md  10-validation-debt-and-next-development-plan.md  11-alpha-release-checklist.md  12-functional-pipeline-reset-and-roadmap.md  12-v0.1-commitment-ledger.md  README.md
protocol/: v1.schema.json
scripts/: build-linux-sidecar.sh  build-sidecar.py  check-packaged-sidecar.py  measure-startup.ps1
tests/: test_asset_production.py  test_build_sidecar.py  test_cache.py  test_capabilities.py  test_character_workflow.py  test_check_packaged_sidecar.py  test_cli.py  test_config_loader.py  test_downloader.py  test_embedding_provider.py  test_event_bus.py  test_external_smoke.py  test_godot_cli.py  test_godot_glb.py  test_godot_project.py  test_http_llm_provider.py  test_import_pipeline.py  test_job_store.py  test_key_resolver.py  test_knowledge_indexer.py  test_knowledge_service.py  test_litellm_provider.py  test_meshy_provider.py  test_protocol_contract.py  test_provider_resolver.py  test_secrets.py  test_services.py  test_sidecar.py  test_task_orchestrator.py  test_vector_store.py
(+40 files in other folders)
