[project]
name = "godot-bridle"
version = "0.1.0a0"
description = "Desktop-first AI harness for Godot asset generation workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "litellm>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]
assets = [
  "pygltflib>=1.16.0",
  "trimesh>=4.4.0",
]
packaging = [
  "pyinstaller>=6.10.0",
]
knowledge = [
  "chromadb>=1.0.0",
]

[project.scripts]
bridle = "bridle.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "external_api: tests that call external provider APIs and require BYOK env vars",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
