[package]
name = "godot-bridle-desktop"
version = "0.1.0-alpha.0"
description = "Desktop UI for Godot Bridle"
edition = "2021"
default-run = "godot-bridle-desktop"

[lib]
name = "godot_bridle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
axum = "0.8"
bridle-protocol = { path = "bridle-protocol" }
command-group = "5.0.1"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bridled"
path = "src/bin/bridled.rs"
